force-app/main/default/objects/NewProject__c/NewProject__c.object-meta.xml
<CustomObject>
    <label>NewProject</label>
    <nameField>
        <label>NewProject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NewProjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>