force-app/main/default/objects/NewProject__c/fields/isDeadLine__c.field-meta.xml
<CustomField>
    <fullName>isDeadLine__c</fullName>
    <formula>IF( AND(TODAY() - End_Date__c &gt; -8 , TODAY() - End_Date__c &lt;0), TRUE , FALSE )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isDeadLine</label>
    <type>Checkbox</type>
</CustomField>