force-app/main/default/objects/NewProject__c/fields/isDeadlinePassed__c.field-meta.xml
<CustomField>
    <fullName>isDeadlinePassed__c</fullName>
    <formula>IF ( AND( TODAY() - End_Date__c &gt; -1  ), TRUE ,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isDeadlinePassed</label>
    <type>Checkbox</type>
</CustomField>